--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-  <img class="logo-alura" src="alura.svg" alt="alura logo">
+  <img class="logo-alura" src="./img/alura.svg" alt="alura logo">
 
   <section class="container">
 
@@ -28,7 +28,7 @@
     </section>
 
     <section id="section-img">
-        <img class="lupa" src="./Muneco.png" alt="imagen gato buscando">
+        <img class="lupa" src="./img/Muneco.png" alt="imagen gato buscando">
         <div>
           <h2>Ningun mensaje fue encontrado</h2>
           <h3>ingresa el texto que desees encriptar o desencriptar</h3>
